@@ -2,7 +2,7 @@
 #
 #  $Id$
 #
-# Run rtems tests on the hppa simulator
+# Run rtems tests on the SPARC simulator includeed with GDB
 # This program generates a simulator script to run each test
 # Typically the test is then run, although it can be generated
 # and left as a file using -s
@@ -131,7 +131,7 @@ do
    TEST_TYPE="single"
 
    case $tname in
-       monitor* | termios* | fileio*)
+       monitor* | termios* | fileio* | pppd*)
            if [ $run_to_completion = "yes" ]
            then
                 warn "Skipping $tname; it is interactive"
